--- a/index.html
+++ b/index.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Alura</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    
+    <header>
+        <div class="cabecalho">
+            <a href="#" class="cabecalho__itens">Home</a>
+            <a href="#" class="cabecalho__itens">Sobre mim</a>
+        </div>
+    </header>
+    <main class="apresentacao">
+        <article class="apresentacao__conteudo">
+            <h2 class="apresentacao__titulo">Eleve seu negócio digital a outro nível<strong 
+                class="titulo-destaque"> com um Front-end de qualidade!</strong></h2>
+            <p class="apresentacao__texto">Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <div class="apresentacao__links">
+                <h2 class="apresentacao__links__titulo">Acesse minhas redes:</h2>
+                <a class="apresentacao__links__link" href="https://github.com/rafaballerini">
+                    <img src="Logo Github.svg">
+                    Github
+                </a>
+                <a class="apresentacao__links__link" href="https://linkedin.com/in/rafaellaballerini">
+                    <img src="Logo linkedin.svg">
+                    linkedin
+                </a>
+                <a class="apresentacao__links__link" href="https://twitch.tv/guilimadev">
+                    <img src="Logo Twitch.svg">
+                    Twitch
+                </a>
+            </div>
+        </article>
+        <img src="Imagem.png" alt="imagem de apresentacao">
+    </main>
+    <footer class="rodape">
+        <p>Desenvolvido por Alura.</p>
+    </footer>
 </body>
 </html>
